# validataclass-search-queries

./: .coveragerc  .gitlab-ci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: release.yml  tests.yml
.stubs/: README.md
docs/: 01-defining-search-queries.md  02-using-search-queries.md  03-search-param-reference.md  04-mypy-plugin.md  index.md
src/validataclass_search_queries/: __init__.py
src/validataclass_search_queries/filters/: __init__.py  bound_search_filter.py  search_params.py
src/validataclass_search_queries/filters/search_params/: __init__.py  base_search_param.py  search_param_boolean.py  search_param_custom.py  search_param_equals.py  search_param_greater_less.py  search_param_multi_select.py  search_param_substring.py
src/validataclass_search_queries/pagination/: __init__.py  abstract_pagination_mixin.py  cursor_pagination_mixin.py  offset_pagination_mixin.py  paginated_result.py  pagination_limit_validator.py  pagination_mixins.py  response_helpers.py
src/validataclass_search_queries/repositories/: __init__.py  search_query_repository_mixin.py
src/validataclass_search_queries/search_queries/: __init__.py  base_search_query.py  search_query_dataclass.py
src/validataclass_search_queries/sorting/: __init__.py  abstract_sorting_mixin.py  sorting_direction.py  sorting_mixin.py
src/validataclass_search_queries/validators/: __init__.py  multi_select_any_of_validator.py  multi_select_enum_validator.py  multi_select_integer_validator.py  multi_select_validator.py
tests/helpers/: __init__.py  assertions.py  mocks.py
tests/unit/: example_test.py
tests/unit/filters/: bound_search_filter_test.py  search_params_test.py
tests/unit/filters/search_params/: conftest.py  search_param_boolean_test.py  search_param_custom_test.py  search_param_equals_test.py  search_param_greater_less_test.py  search_param_multi_select_test.py  search_param_substring_test.py
tests/unit/pagination/: paginated_result_test.py  pagination_limit_validator_test.py  response_helpers_test.py
tests/unit/search_queries/: _helpers.py  base_search_query_test.py  search_query_dataclass_test.py
tests/unit/sorting/: sorting_direction_test.py  sorting_mixin_test.py
tests/unit/validators/: multi_select_any_of_validator_test.py  multi_select_enum_validator_test.py  multi_select_integer_validator_test.py  multi_select_validator_test.py
