[metadata]
name = validataclass_search_queries
author = binary butterfly GmbH
author_email = lexi.stelter@binary-butterfly.de
description = Python library for search queries in REST APIs (filters, pagination, sorting) based on validataclass and SQLAlchemy.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/binary-butterfly/validataclass-search-queries
project_urls =
    Documentation = https://github.com/binary-butterfly/validataclass-search-queries/blob/main/docs/index.md
    Changelog = https://github.com/binary-butterfly/validataclass-search-queries/blob/main/CHANGELOG.md
    Issue Tracker = https://github.com/binary-butterfly/validataclass-search-queries/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = ~=3.10
install_requires =
    typing-extensions ~= 4.15
    # Allow validataclass 0.12.*
    #validataclass >= 0.12.0, < 0.13.0
    # TODO: 0.12.0 is not released yet. For testing we need to build and install validataclass manually (see tox.ini).
    validataclass == 0.12.0a1.dev1
    sqlalchemy >= 1.4, < 2.1

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest ~= 9.0
    pytest-cov ~= 7.0
    coverage ~= 7.13
    flake8 ~= 7.3
