[metadata]
name = validataclass_search_queries
author = binary butterfly GmbH
author_email = lexi.stelter@binary-butterfly.de
description = Python library for search queries in REST APIs (filters, pagination, sorting) based on validataclass and SQLAlchemy.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/binary-butterfly/validataclass-search-queries
project_urls =
    Documentation = https://github.com/binary-butterfly/validataclass-search-queries/blob/main/docs/index.md
    Changelog = https://github.com/binary-butterfly/validataclass-search-queries/blob/main/CHANGELOG.md
    Issue Tracker = https://github.com/binary-butterfly/validataclass-search-queries/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = ~=3.10
install_requires =
    typing-extensions ~= 4.15
    # Allow validataclass 0.12.*
    validataclass >= 0.12.0, < 0.13.0
    sqlalchemy >= 1.4, < 2.1

[options.packages.find]
where = src

[options.extras_require]
# Set minimum versions but allow patch level updates with "~= x.y.z" to avoid breaking tests or similar, e.g. when mypy
# changes how error messages look in a minor version update.
testing =
    pytest ~= 9.0.3
    pytest-cov ~= 7.1.0
    coverage ~= 7.13.5
    flake8 ~= 7.3.0
    mypy ~= 1.20.1
